--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "arkturian-canvas-engine": "^1.0.18",
     "qrcode": "^1.5.4",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "react-router-dom": "^7.9.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
