chore: sync devops updates

--- a/.env.example
+++ b/.env.example
@@ -5,4 +5,4 @@
 VITE_KORALMBAHN_API_URL=http://localhost:8080
 
 # Storage API URL
-VITE_KORALMBAHN_STORAGE_URL=https://api-storage.arkturian.com
+VITE_KORALMBAHN_STORAGE_URL=https://api-storage.arkserver.arkturian.com
